--- a/style.css
+++ b/style.css
@@ -2,10 +2,64 @@
   margin: 0;
   padding: 0;
 }
+html,
+body {
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  display: none;
+}
 .container {
   width: 100%;
   height: 100%;
   background-color: #fff333;
   display: grid;
-  place-items: center;
+  align-items: center;
+}
+
+.icFlav {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  font-size: 100px;
+  font-family: "indie flower", cursive;
+  border-radius: 50%;
+  background-image: url(polka.jpg);
+  margin-top: -1100px;
+  margin-left: 600px;
+  margin-bottom: 1000px;
+  animation: slide 2s cubic-bezier(1, 0, 0, 1) forwards;
+}
+a {
+  position: absolute;
+  transform: translateX(-50%);
+  font-size: 20px;
+  border-radius: 50%;
+  padding: 12px;
+  text-decoration: none;
+  color: black;
+}
+a:visited {
+  color: black;
+}
+a:hover {
+  color: black;
+}
+
+@keyframes slide {
+  0% {
+    transform: scaleX(1);
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(0);
+    transform: scale(1);
+    margin-top: 1100px;
+  }
+  100% {
+    transform: translateX(1000px);
+    transform: scale(10);
+    margin-top: 1100px;
+  }
 }
