anims broken, bgs done (pc res only)

--- a/stylePC.css
+++ b/stylePC.css
@@ -22,41 +22,43 @@ body {
   height: 300px;
   text-align: center;
   font-family: "indie flower", cursive;
-  background-color: black;
+  background-size: 300px;
   border-radius: 50%;
-  margin-top: -66%;
+  margin-top: 50%;
   margin-left: 800px;
-  margin-bottom: 60%;
+  margin-bottom: 100%;
+  transform: translate(0, 1000px);
   animation: slide 3s cubic-bezier(1, 0, 0, 1) 400ms forwards;
+}
+#chock1 {
+  background-image: url(./images/chock.svg);
+}
+#van1 {
+  background-image: url(./images/van.svg);
+}
+#straw1 {
+  background-image: url(./images/straw.svg);
+  background-size: cover;
+}
+#mint1 {
+  background-image: url(./images/mint.svg);
+  background-size: 300px;
 }
 @keyframes slide {
   0% {
-    transform: scaleX(1);
-    transform: translateX(0);
-    margin-bottom: 60%;
-  }
-  25% {
-    transform: translateX(0);
     transform: scale(1);
-    margin-top: 100%;
-    margin-bottom: 0%;
+    transform: translate(0, 1000px);
   }
   50% {
-    transform: translateX(0);
     transform: scale(1);
-    margin-top: 0px;
-    margin-bottom: 0px;
+    transform: translate(0, 1100px);
   }
-  90% {
-    transform: translateX(0);
-    transform: scale(3);
-    margin-top: 16%;
-    margin-bottom: 85%;
+  70% {
+    transform: scale(1);
+    transform: translate(0, 1100px);
   }
   100% {
-    transform: scale(8);
-    margin-top: 80%;
-    margin-bottom: 50%;
+    transform: translate(0, 1100px) scale(10);
   }
 }
 a {
@@ -68,7 +70,7 @@ a {
   text-decoration: none;
   color: #ffea00;
   opacity: 0;
-  animation: textAppear 1s cubic-bezier(1, 0, 0, 1) 3300ms forwards;
+  animation: textAppear 600ms cubic-bezier(1, 0, 0, 1) 2200ms forwards;
   letter-spacing: 1em;
 }
 a:visited {
@@ -87,14 +89,6 @@ a:hover {
   margin-left: 28px;
 }
 @keyframes textAppear {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes bgAppear {
   0% {
     opacity: 0;
   }
