--- a/stylePC.css
+++ b/stylePC.css
@@ -24,16 +24,16 @@ body {
   font-family: "indie flower", cursive;
   background-size: 300px;
   border-radius: 50%;
-  transform: translate(0, -11000px);
+  transform: translate(0, -14000px);
   margin-top: 40%;
   margin-left: 800px;
-  margin-bottom: 150%;
-  animation: slide 2.5s cubic-bezier(1, 0, 0, 1) 400ms forwards;
+  margin-bottom: 100%;
+  animation: slide 2.5s cubic-bezier(0.85, 0, 0.15, 1) 400ms forwards;
 }
 
 @keyframes slide {
   0% {
-    transform: scale(1) translate(0, -11000px);
+    transform: scale(1) translate(0, -14000px);
   }
   50% {
     transform: scale(1) translate(0, 500px);
@@ -59,7 +59,7 @@ body {
 }
 #mint1 {
   background-image: url(./images/mint.svg);
-  background-size: cover;
+  background-size: 300px;
 }
 a {
   position: absolute;
@@ -70,7 +70,7 @@ a {
   text-decoration: none;
   color: #ffea00;
   opacity: 0;
-  animation: textAppear 600ms cubic-bezier(1, 0, 0, 1) 2200ms forwards;
+  animation: textAppear 600ms cubic-bezier(1, 0, 0, 1) 2300ms forwards;
   letter-spacing: 1.2em;
 }
 a:visited {
@@ -80,11 +80,10 @@ a:hover {
   color: none;
 }
 #chock {
-  margin-left: -10px;
   color: #7cc4cc;
 }
 #van {
-  margin-left: 14px;
+  margin-left: 17px;
   color: #1e2e56;
 }
 #straw {
@@ -92,8 +91,8 @@ a:hover {
   color: #155833;
 }
 #mint {
-  margin-left: 28px;
-  color: #c68acc;
+  margin-left: 37px;
+  color: #d968a9;
 }
 @keyframes textAppear {
   0% {
