--- a/stylePC.css
+++ b/stylePC.css
@@ -15,6 +15,7 @@ body {
   display: grid;
   align-items: center;
   background-image: url(./images/bg.png);
+  background-size: 1920px;
 }
 .iCr {
   position: relative;
@@ -25,10 +26,10 @@ body {
   background-size: 300px;
   border-radius: 50%;
   transform: translate(0, -14000px);
-  margin-top: 40%;
+  margin-top: 49%;
   margin-left: 800px;
   margin-bottom: 100%;
-  animation: slide 2.5s cubic-bezier(0.85, 0, 0.15, 1) 400ms forwards;
+  animation: slide 5s cubic-bezier(1, 0, 0, 1) forwards;
 }
 
 @keyframes slide {
@@ -70,7 +71,7 @@ a {
   text-decoration: none;
   color: #ffea00;
   opacity: 0;
-  animation: textAppear 600ms cubic-bezier(1, 0, 0, 1) 2300ms forwards;
+  animation: textAppear 600ms cubic-bezier(1, 0, 0, 1) 4400ms forwards;
   letter-spacing: 1.2em;
 }
 a:visited {
