--- a/style.css
+++ b/style.css
@@ -10,41 +10,42 @@ body {
   display: none;
 }
 .container {
-  width: 1920px;
-  height: 6912px;
-  position: absolute;
-  display: grid;
+  width: 100%;
+  height: 100vh;
+  aspect-ratio: 1/0.277;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-image: url(./images/bg.png);
-  background-size: 1920px;
+  background-size: cover;
 }
 .iCr {
-  position: relative;
-  width: 300px;
-  height: 300px;
+  position: absolute;
+  width: 18.75rem;
+  height: 18.75rem;
   text-align: center;
   font-family: "indie flower", cursive;
   background-size: 300px;
   border-radius: 50%;
-  margin-top: 0%;
-  margin-left: 800px;
+  margin-top: 500rem;
 }
 
 @keyframes slide {
   0% {
-    transform: scale(1) translate(0, -2000px) rotate(360deg);
+    transform: scale(1) translate(0, -125rem) rotate(360deg);
   }
   25% {
-    transform: scale(1) translate(0, -500px) rotate(360deg);
+    transform: scale(1) translate(0, -31.125rem) rotate(360deg);
   }
   50% {
-    transform: scale(2) translate(0, -820px) rotate(180deg);
+    transform: scale(2) translate(0, -51rem) rotate(180deg);
   }
   75% {
-    transform: translate(0, -1300px) scale(4) rotate(90deg);
+    transform: translate(0, -81.25rem) scale(4) rotate(90deg);
   }
   100% {
-    transform: translate(0, -600px) scale(4) rotate(0deg);
+    transform: translate(0, -37.5rem) scale(4) rotate(0deg);
   }
 }
 @keyframes slide1 {
@@ -101,31 +102,31 @@ body {
 #chock1 {
   background-image: url(./images/chock.svg);
   background-size: cover;
-  transform: translate(0, -2000px) rotate(360deg);
+  transform: translate(0, -125.5rem) rotate(360deg);
   animation: slide 5s cubic-bezier(0.75, 0, 0.25, 1) forwards;
 }
 #van1 {
   background-image: url(./images/van.svg);
   background-size: cover;
-  transform: translate(0, -4000px) rotate(360deg);
+  transform: translate(0, -250rem) rotate(360deg);
   animation: slide1 5s cubic-bezier(0.75, 0, 0.25, 1) forwards;
 }
 #straw1 {
   background-image: url(./images/straw.svg);
   background-size: cover;
-  transform: translate(0, 2000px) rotate(360deg);
+  transform: translate(0, 125.5rem) rotate(360deg);
   animation: slide2 5s cubic-bezier(0.75, 0, 0.25, 1) forwards;
 }
 #mint1 {
   background-image: url(./images/mint.svg);
   background-size: 300px;
-  transform: translate(0, 2000px) rotate(360deg);
+  transform: translate(0, 125.5rem) rotate(360deg);
   animation: slide3 5s cubic-bezier(0.75, 0, 0.25, 1) forwards;
 }
 a {
   position: absolute;
   transform: translateX(-90px);
-  font-size: 9px;
+  font-size: 0.562rem;
   border-radius: 50%;
   padding: 9%;
   text-decoration: none;
@@ -141,19 +142,15 @@ a:hover {
   color: none;
 }
 #chock {
-  margin-left: 5px;
   color: #7cc4cc;
 }
 #van {
-  margin-left: 22px;
   color: #1e2e56;
 }
 #straw {
-  margin-left: -5px;
   color: #155833;
 }
 #mint {
-  margin-left: 42px;
   color: #d968a9;
 }
 @keyframes textAppear {
